[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["games"]
description = "An interactive adventure terminal game in a labyrinth"
edition = "2021"
homepage = "https://veeso.github.io/donmaze/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["rust-game", "maze", "labyrinth", "terminal-game", "tui", "tui-game"]
license = "MIT"
name = "donmaze"
readme = "README.md"
repository = "https://github.com/veeso/donmaze"
version = "0.1.0"

[package.metadata.rpm]
package = "donmaze"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
donmaze = { path = "/usr/bin/donmaze" }

[package.metadata.deb]
maintainer = "Christian Visintin <christian.visintin1997@gmail.com>"
copyright = "2022, Christian Visintin <christian.visintin1997@gmail.com>"
extended-description-file = "docs/misc/README.deb.txt"

[[bin]]
name = "donmaze"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
argh = "^0.1.9"
log = "^0.4"
petgraph = "^0.6"
rand = "^0.8.5"
rodio = { version = "^0.16", default-features = false }
serde = { version = "^1", features = [ "derive" ] }
simplelog = "^0.12.0"
thiserror = "^1"
tui-realm-stdlib = "^1.1.7"
tuirealm = "^1.8.0"

[dev-dependencies]
pretty_assertions = "^1.3"

[features]
default = [ ]
github-actions = [ ]

[profile.dev]
incremental = true

[profile.release]
strip = true
