[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["games"]
description = "An interactive adventure terminal game in a labyrinth"
edition = "2021"
homepage = "https://veeso.github.io/donmaze/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = [
  "rust-game",
  "maze",
  "labyrinth",
  "terminal-game",
  "tui",
  "tui-game",
]
license = "MIT"
name = "donmaze"
readme = "README.md"
repository = "https://github.com/veeso/donmaze"
version = "0.1.0"

[[bin]]
name = "donmaze"
path = "src/main.rs"

[dependencies]
anyhow = "^1"
argh = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
dirs = "^6"
lazy_static = "^1.4"
log = "^0.4"
petgraph = { version = "^0.7", features = ["serde-1"] }
rand = "^0.9"
rand_pcg = "^0.9"
rand_seeder = "^0.4"
rodio = { version = "^0.20", default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
simplelog = "^0.12.0"
thiserror = "2"
tui-realm-stdlib = "2"
tuirealm = "2"

[dev-dependencies]
pretty_assertions = "^1"
serial_test = "3"
tempfile = "^3"

[features]
default = []
github-actions = []

[profile.dev]
incremental = true

[profile.release]
strip = true
